AWSTemplateFormatVersion: '2010-09-09'.yml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  InstanceType:
    Description: EC2 Instance Type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - m4.large
Resources:
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0b5eea76982371e91
      SecurityGroups:
        - !Ref InstanceSecurityGroup

      UserData:
        'Fn::Base64':
          !Sub |
            #! /bin/bash
            yum update -y
            yum install -y httpd
            cd /var/www/html
            wget https://raw.githubusercontent.com/sultanakdogan/Project-101-kittens-static-website/main/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
            wget https://raw.githubusercontent.com/sultanakdogan/Project-101-kittens-static-website/main/Project-101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/sultanakdogan/Project-101-kittens-static-website/main/Project-101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/sultanakdogan/Project-101-kittens-static-website/main/Project-101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
            wget https://raw.githubusercontent.com/sultanakdogan/Project-101-kittens-static-website/main/Project-101-kittens-carousel-static-website-ec2/static-web/cat3.png
            systemctl start httpd
            systemctl enable httpd
          

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH Access  22 and http Access 80 to client host
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0


Outputs:
  InstanceId:
    Description: InstanceId of the EC2 instance
    Value: !Ref EC2Instance
  PublicDNS:
    Description: Public DNS of the EC2 instance
    Value: !GetAtt
            - EC2Instance
            - PublicDnsName
  PublicIP:
    Description: Public IP Adress of the EC2 instance
    Value: !GetAtt
            - EC2Instance
            - PublicIp
